<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ywq.ares.dreamcatcher.ui.activity.RecordVoiceActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_task" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackground"
            android:padding="10dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:singleLine="true"
                    android:id="@+id/tvVoice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    tools:text="声音阈值:" />

                <SeekBar
                    android:id="@+id/dbSeekBar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:max="60"
                    tools:progress="5" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <Button
            android:id="@+id/recordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="开始"
            android:visibility="gone" />

        <Button
            android:id="@+id/listenerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_listener_voice" />

        <RadioGroup
            android:visibility="gone"
            android:id="@+id/rg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/conditionRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="达到分贝阈值时录音" />

            <RadioButton
                android:id="@+id/onlyRb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="持续录音" />
        </RadioGroup>


        <LinearLayout
            android:id="@+id/outLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/deadlineBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_select_deadline" />



            <EditText
                android:id="@+id/deadlineEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:inputType="number"
                tools:text="300"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/str_minute"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/intervalLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/intervalBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_select_recording_length" />

            <EditText
                android:id="@+id/intervalEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center_vertical"
                android:inputType="number"
                android:text="5"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/str_minute"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/dreamLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/dreamBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_select_sleep_time" />



            <EditText
                android:id="@+id/dreamEt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:inputType="number"
                tools:text="30"
                android:textSize="20sp" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"                android:text="@string/str_minute"

                android:textSize="20sp" />
        </LinearLayout>
        <Button
            android:id="@+id/beginBtn"
            android:text="@string/action_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:visibility="gone"
        app:layout_anchor="@id/outLayout"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_pause_black_24dp"
        android:layout_marginEnd="60dp"
        app:layout_anchorGravity="bottom|end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>